--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: haskell
 
 ghc:
   - 7.8
+
+script:
+  - cabal configure --enable-tests && cabal build && cabal test && cabal haddock --executables
