--- a/bstcli.cabal
+++ b/bstcli.cabal
@@ -10,3 +10,6 @@ build-type:         Simple
 Executable:         bstcli
 hs-source-dirs:     src
 Main-is:            Main.hs
+Other-Modules:      CLI
+                    Command
+                    BinarySearchTree
