--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ ghc:
   - 7.8
 
 script:
-  - cabal configure --enable-tests && cabal build && cabal test && cabal haddock --executables
+  - cabal configure --enable-tests
+  - cabal build
+  - cabal test
+  - cabal haddock --executables
